INREL-3969: fixed positioning social for social icons on mobile

--- a/sass/components/lexicon/_lexicon.scss
+++ b/sass/components/lexicon/_lexicon.scss
@@ -1,6 +1,16 @@
 @import "lexicon.variables.scss";
 
 .lexicon {
+
+  @media (max-width: $screen-xs-max) {
+    .item-content__content {
+      padding-top: $gap-v-region-mobile;
+    }
+    .item-group--outer {
+      position: static;
+    }
+  }
+
   .list__glossary {
     @extend %list__glossary;
     @extend %margin--v-region;
